logs/Slang/chapter-8/8.26.4--illegal_forward_def_implements.sv.log
name: illegal_forward_def_implements
description: implementing forward typedef for an interface class should fail
should_fail: 1
tags: 8.26.4
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.4--illegal_forward_def_implements.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.4--illegal_forward_def_implements.sv:8:26: error: forward typedef 'ihello' does not resolve to a data type
	typedef interface class ihello;
	                        ^
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.4--illegal_forward_def_implements.sv:10:2: error: language feature not yet supported
	class Hello implements ihello;
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.4--illegal_forward_def_implements.sv:16:2: error: language feature not yet supported
	interface class ihello;
	^~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.4--illegal_forward_def_implements.sv:21:2: error: use of undeclared identifier 'Hello'
	Hello obj;
	^~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.4--illegal_forward_def_implements.sv:24:9: error: language feature not yet supported
		obj = new;
		      ^~~
